# tucan-plus

./: .gitignore  Cargo.toml  README.md  a  flake.nix
.cargo/: config.toml
.github/workflows/: release.yaml  rust.yaml  test.yaml
crates/html-extractor/: Cargo.toml
crates/html-extractor/src/: lib.rs
crates/html-handler/: Cargo.toml
crates/html-handler/src/: lib.rs
crates/tucan-connector/: Cargo.toml
crates/tucan-connector/src/: coursedetails.rs  courseprep.rs  courseresults.rs  examregistration.rs  examresults.rs  gradeoverview.rs  head.rs  lib.rs  login.rs  mlsstart.rs  moduledetails.rs  month.rs  mycourses.rs  mydocuments.rs  myexams.rs  mymodules.rs  registration.rs  root.rs  student_result.rs  vv.rs
crates/tucan-connector/src/externalpages/: studveranst.rs  welcome.rs
crates/tucan-connector/src/startpage_dispatch/: after_login.rs  one.rs
crates/tucan-plus-api/: Cargo.toml
crates/tucan-plus-api/src/: lib.rs  main.rs
crates/tucan-plus-dioxus/: Cargo.toml  index.html
crates/tucan-plus-dioxus/.cargo/: config.toml
crates/tucan-plus-dioxus/assets/: manifest.json  worker.js
crates/tucan-plus-dioxus/src/: api_server.rs  common.rs  database_management.rs  examregistration.rs  export_database.rs  export_semester.rs  gradeoverview.rs  lib.rs  login_component.rs  logout_component.rs  main.rs  my_exams.rs  my_semester_modules.rs  navbar.rs  navbar_logged_in.rs  planning.rs
crates/tucan-plus-dioxus/src/planning/: load_leistungsspiegel.rs  load_semesters.rs
crates/tucan-plus-planning/: Cargo.toml
crates/tucan-plus-planning/examples/: fetcher.rs  leistungsspiegel.rs  normalize.rs
crates/tucan-plus-planning/src/: lib.rs
crates/tucan-plus-service-worker/: Cargo.toml
crates/tucan-plus-service-worker/src/: main.rs
crates/tucan-plus-tests/: Cargo.toml
crates/tucan-plus-tests/src/: browsers.rs  lib.rs
crates/tucan-plus-worker/: Cargo.toml
crates/tucan-plus-worker/migrations/2025-09-07-115612_create_anmeldungen/: up.sql
crates/tucan-plus-worker/src/: lib.rs  models.rs  schema.rs
crates/tucan-types/: Cargo.toml
crates/tucan-types/src/: enhanced_module_results.rs  examregistration.rs  lib.rs  registration.rs
tucan-plus-extension/: background.js  content-script-gitlab.js  content-script-hessenbox.js  content-script-login.js  content-script-moodle-informatik.js  content-script-moodle.js  content-script-redirect.js  content-script-sharelatex.js  content-script-tucan-autologin.js  content-script.js  context-menu.js  fix-session-id-in-url.js  manifest.json  open-in-tucan.js  package-lock.json  package.json  popup.html  popup.js  recover-tabs.js  rules.json  url-mappings.js  utils.js
