[workspace]
members = [
    "./crates/*"
]
edition = "2024"
resolver = "3"
version = "0.1.0"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
debug = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[profile.wasm-dev]
inherits = "dev"
lto = true # wasm-split

[patch.crates-io]
sqlite-wasm-rs = { git = "https://github.com/mohe2015/sqlite-wasm-rs.git", branch = "sqlite3_os_end" }
