[workspace]
members = ["./crates/*"]
edition = "2024"
resolver = "3"
version = "0.1.0"
rust-version = "1.87"

[workspace.dependencies]
# External dependencies
async-compression = { version = "0.4.27", features = ["brotli", "all-implementations"] }
axum = { version = "0.8.1", features = ["macros"] }
axum-core = "0.5.0"
axum-extra = { version = "0.12.5", features = ["cookie"] }
bytes = "1"
console_log = { version = "1" }
cookie = "0.18"
data-encoding = "2"
diesel = { git = "https://github.com/diesel-rs/diesel.git", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time", "r2d2"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel.git", features = ["sqlite"] }
dioxus = { version = "0.7", features = ["launch", "devtools", "logger", "lib", "router"] }
dioxus-desktop = { version = "0.7" }
dioxus-devtools = { version = "0.7", features = ["serve"] }
dioxus-router = { version = "0.7" }
dotenvy = "0.15"
dynosaur = "0.3"
ego-tree = "0.11"
env_logger = "0.11.8"
fragile = { git = "https://github.com/mitsuhiko/fragile.git", features = ["future"] }
futures = "0.3.31"
futures-core = "0.3"
futures-util = { version = "0.3", features = ["io"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
git-version = "0.3"
html5ever = "0.37.1"
itertools = "0.14"
js-sys = "0.3"
log = { version = "0.4" }
num = "0.4"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "histogram"] }
proc-macro2 = "1"
quote = "1"
rand = "0.9.2"
regex = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
scraper = { git = "https://github.com/rust-scraper/scraper.git", features = ["deterministic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha3 = "0.10"
sqlite-wasm-rs = { version = "0.5.2" }
sqlite-wasm-vfs = "0.2.0"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
thiserror = "2"
time = { version = "0.3.41", features = ["serde-human-readable", "wasm-bindgen", "macros"] }
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
url = "2"
utoipa = "5"
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
wasm-bindgen = { version = "0.2.104" }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3" }

# Optional platform-specific dependencies
android-native-keyring-store = { version = "0.5" }
dbus-secret-service-keyring-store = { version = "0.3", features = ["crypto-rust"] }
derive_more = { version = "2.0.1", features = ["from"] }
enum_dispatch = "0.3.13"
erased-serde = "0.4"
keyring-core = { version = "0.7" }
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
typetag = "0.2"
web-extensions = { git = "https://github.com/web-extensions-rs/web-extensions" }
web-extensions-sys = { version = "0.4.2" }

# Internal workspace crates
html-extractor = { path = "crates/html-extractor" }
html-handler = { path = "crates/html-handler" }
tucan-connector = { path = "crates/tucan-connector" }
tucan-plus-planning = { path = "crates/tucan-plus-planning" }
tucan-plus-worker = { path = "crates/tucan-plus-worker" }
tucan-types = { path = "crates/tucan-types" }
