[package]
name = "html-handler"
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"
rust-version = "1.87"

[dependencies]
scraper = { git = "https://github.com/rust-scraper/scraper.git", features = ["deterministic"] }
data-encoding = "2"
sha3 = "0.10"
ego-tree = "0.11"
html5ever = "0.37.1"
