[package]
name = "tucan-connector"
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"
rust-version = "1.87"

[dependencies]
reqwest = { workspace = true, features = ["stream", "form"] }
tokio = { workspace = true, features = ["rt", "macros"] }
thiserror.workspace = true
futures-core.workspace = true
bytes.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
scraper.workspace = true
ego-tree.workspace = true
sha3.workspace = true
data-encoding.workspace = true
html-extractor.workspace = true
html-handler.workspace = true
dotenvy.workspace = true
regex.workspace = true
itertools.workspace = true
serde.workspace = true
utoipa.workspace = true
axum-core.workspace = true
tucan-types.workspace = true
log.workspace = true
time.workspace = true
tucan-plus-worker.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
getrandom.workspace = true
# https://github.com/mitsuhiko/fragile/commit/47bb7220f4d1c422350bd95b5c43bf8e4a51f30f
fragile.workspace = true

[features]
authenticated_tests = []
