[package]
name = "tucan-plus-api"
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"
rust-version = "1.87"

[dependencies]
dioxus-devtools.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum.workspace = true
utoipa.workspace = true
serde.workspace = true
utoipa-swagger-ui.workspace = true
tucan-connector.workspace = true
utoipa-axum.workspace = true
tucan-types.workspace = true
axum-extra.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tower.workspace = true
env_logger.workspace = true
tucan-plus-worker.workspace = true

[features]
hotpatch = []
