[package]
name = "tucan-plus-dioxus"
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus.workspace = true
tucan-types.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
url.workspace = true
tucan-connector = { workspace = true }
tracing.workspace = true
plotters.workspace = true
git-version.workspace = true
futures.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
tucan-plus-worker.workspace = true
tokio = { workspace = true, features = ["sync", "io-util"] }
rand.workspace = true
time.workspace = true
num.workspace = true
itertools.workspace = true
async-compression.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
sqlite-wasm-rs.workspace = true
sqlite-wasm-vfs.workspace = true
cookie.workspace = true
getrandom.workspace = true
web-extensions = { workspace = true }
web-extensions-sys = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "HtmlDocument", "NodeList", "HtmlSelectElement", "Blob", "Url", "BlobPropertyBag", "Worker", "WorkerOptions", "WorkerType", "AddEventListenerOptions", "EventTarget", "ErrorEvent", "FileList", "HtmlInputElement", "Navigator", "ServiceWorkerContainer", "ServiceWorker", "LockManager", "Lock", "BroadcastChannel"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_log = { workspace = true, features = ["color"] }
