[package]
name = "tucan-plus-planning"
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"
rust-version = "1.87"

[dependencies]
tucan-types.workspace = true
futures-util.workspace = true
serde_json.workspace = true
serde.workspace = true
async-compression.workspace = true
tokio = { workspace = true, features = ["io-util", "time"] }
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
itertools.workspace = true

[dev-dependencies]
tucan-connector.workspace = true
dotenvy.workspace = true
tucan-plus-worker.workspace = true
