[package]
name = "tucan-plus-service-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["ServiceWorkerGlobalScope", "ExtendableMessageEvent"] }
console_log.workspace = true
log.workspace = true
wasm-bindgen-futures.workspace = true
