[package]
name = "tucan-plus-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
tucan-types.workspace = true
tokio = { workspace = true, default-features = false }
time.workspace = true
serde.workspace = true
futures.workspace = true
itertools.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libsqlite3-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# TODO FIXME: separate the rpc layer
sqlite-wasm-rs.workspace = true
getrandom.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["DedicatedWorkerGlobalScope", "MessageEvent", "Worker", "BroadcastChannel", "Document", "Window", "HtmlDocument", "NodeList", "HtmlSelectElement", "Blob", "Url", "BlobPropertyBag", "Worker", "WorkerOptions", "WorkerType", "AddEventListenerOptions", "EventTarget", "ErrorEvent", "FileList", "HtmlInputElement", "Navigator", "ServiceWorkerContainer", "ServiceWorker", "LockManager", "Lock", "BroadcastChannel"] }
js-sys.workspace = true
typetag.workspace = true
erased-serde.workspace = true
enum_dispatch.workspace = true
# https://github.com/mitsuhiko/fragile/commit/47bb7220f4d1c422350bd95b5c43bf8e4a51f30f
fragile.workspace = true
derive_more.workspace = true
rand.workspace = true
