[package]
name = "tucan-types"
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"

[dependencies]
serde.workspace = true
utoipa.workspace = true
axum-core.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["stream"] }
regex.workspace = true
dynosaur.workspace = true
